# dioxus-experiments

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  dogs.txt  input.css  package.json  tailwind.config.js
assets/: tailwind.css
exp/: timeout.ts
legacy/: Dioxus.toml  dogs.txt
legacy/assets/: tailwind.css
legacy/src/: login.rs  server.rs  store.rs  use_form.rs
src/: guide_component.rs  home.rs  hot_dog.rs  login.rs  main.rs  nav_bar.rs  profile.rs  router.rs  store.rs  use_form.rs
src/components/: input.rs
src/containers/: mod.rs  nav_bar.rs
src/hooks/: mod.rs  use_form.rs
src/screens/: about.rs  blog.rs  home.rs  login.rs  login_form.rs  mod.rs  not_found.rs  post.rs  profile.rs
src/server/: post.rs
src/stores/: auth.rs  lib.rs  mod.rs  post.rs
