[package]
name = "exp"
version = "0.1.0"
authors = ["hmziqrs <hmziqrs@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
reqwest = { version = "0.12.15", features = ["json"] }
validator = { version = "0.19", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
gloo-storage = "0.3.0"
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"], optional = true }
axum = { version = "0.8.3", optional = true }


[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:tokio", "dep:axum"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
